# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: superlinter.yml
brain_games/: cli.py
brain_games/scripts/: brain_calc.py  brain_core.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
